major update to all components'

--- a/examples/advanced_precursors.ipynb
+++ b/examples/advanced_precursors.ipynb
@@ -12,16 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "d26a2063-3242-42b7-91a3-6e1799b5476c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('./../..')\n",
-    "from domino import LaggedAnalyser\n",
-    "from domino.plotting import contourf_grid,overlay_contour,quickplot,cat_1d_plot,cat_2d_plot\n",
-    "import domino.composites as dcmp\n",
+    "sys.path.append('./../domino/')\n",
+    "from composites import LaggedAnalyser\n",
+    "from plotting import contourf_grid,overlay_contour,quickplot,cat_1d_plot,cat_2d_plot\n",
     "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
