--- a/examples/precursor_index_computation.ipynb
+++ b/examples/precursor_index_computation.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "from domino.util import offset_time_dim\n",
     "UAtl=offset_time_dim(xr.open_dataarray(\n",
-    "    '/data/ox5324/compute_2021_clean_data/Atl_lonmean_U_1979-2021.nc'\n",
+    "    example_data_path+'/Atl_lonmean_U_1979-2021.nc'\n",
     "    ).load(),-12,'hours')\n",
     "UAtl=UAtl.sel(lat=IVT.lat)\n",
     "UAtl=UAtl.assign_coords(plev=UAtl.plev/100)\n",
